--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 .chat-container {
   max-width: 600px;
   margin: 20px auto;
-  background-color: #fff;
+  background-color: #ececec;
   border: 1px solid #ddd;
   border-radius: 5px;
   overflow: hidden;
