--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </style>
   <script type='text/javascript' src='https://cdn.scaledrone.com/scaledrone.min.js'></script>
   <!--<script type='text/javascript' src='http://0.0.0.0:8080/scaledrone.js'></script>-->
-  <title>Your Chatting Site</title>
+  <title>AnoChat</title>
 </head>
 <body>
   <div class="chat-container">
