--- a/index.html
+++ b/index.html
@@ -73,12 +73,39 @@
   background-color: #267bb5;
 }
 
+       .navbar {
+      background-color: #333;
+      overflow: hidden;
+    }
+
+    .navbar a {
+      float: left;
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 20px;
+      text-decoration: none;
+    }
+
+    .navbar a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
   </style>
   <script type='text/javascript' src='https://cdn.scaledrone.com/scaledrone.min.js'></script>
   <!--<script type='text/javascript' src='http://0.0.0.0:8080/scaledrone.js'></script>-->
   <title>AnoChat</title>
 </head>
 <body>
+
+  <div class="navbar">
+    <a href="index.html">Home</a>
+    <a href="login.html">Login</a>
+    <a href="signup.html">Signup</a>
+    <!-- Add more navigation links as needed -->
+  </div>
+
   <div class="chat-container">
     <div class="members-count">Online: <span class="count">-</span></div>
     <div class="members-list">Members: <span class="list">-</span></div>
