--- a/signup.html
+++ b/signup.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style>
+      .navbar {
+      background-color: #333;
+      overflow: hidden;
+    }
+
+    .navbar a {
+      float: left;
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 20px;
+      text-decoration: none;
+    }
+
+    .navbar a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
+  </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Signup</title>
 </head>
 <body>
+   <div class="navbar">
+    <a href="index.html">Home</a>
+    <a href="login.html">Login</a>
+    <a href="signup.html">Signup</a>
+    <!-- Add more navigation links as needed -->
+  </div>
+
   <form id="signupForm">
     <input type="text" id="signupUsername" placeholder="Username" required>
     <input type="password" id="signupPassword" placeholder="Password" required>
