--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 <body>
 
   <div class="navbar">
-    <a href="index.html">Home</a>
-    <a href="login.html">Login</a>
-    <a href="signup.html">Signup</a>
+    <a href="index.html">Global Chat</a>
+    <a href="login.html">Courses</a>
+    <a href="signup.html">UPCOMING TESTS</a>
     <!-- Add more navigation links as needed -->
   </div>
 
