--- a/login.html
+++ b/login.html
@@ -3,9 +3,77 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
   <style>
-      .navbar {
+    body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Arial', sans-serif;
+  background-color: #f5f5f5;
+}
+
+.chat-container {
+  max-width: 600px;
+  margin: 20px auto;
+  background-color: #ececec;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.members-count,
+.members-list {
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+}
+
+.messages {
+  height: 300px;
+  overflow-y: scroll;
+  padding: 10px;
+}
+
+.message {
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  background-color: #e6f7ff;
+}
+
+.member {
+  font-weight: bold;
+  color: #3498db;
+}
+
+.message-form {
+  display: flex;
+  padding: 10px;
+  border-top: 1px solid #ddd;
+}
+
+.message-form__input {
+  flex-grow: 1;
+  border: 1px solid #ddd;
+  padding: 8px;
+  font-size: 14px;
+  border-radius: 3px;
+}
+
+.message-form__button {
+  margin-left: 10px;
+  padding: 8px 15px;
+  font-size: 14px;
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.message-form__button:hover {
+  background-color: #267bb5;
+}
+
+       .navbar {
       background-color: #333;
       overflow: hidden;
     }
@@ -23,22 +91,28 @@
       background-color: #ddd;
       color: black;
     }
+
   </style>
+  <script type='text/javascript' src='https://cdn.scaledrone.com/scaledrone.min.js'></script>
+  <!--<script type='text/javascript' src='http://0.0.0.0:8080/scaledrone.js'></script>-->
+  <title>AnoChat</title>
 </head>
 <body>
 
-   <div class="navbar">
-    <a href="index.html">Home</a>
-    <a href="login.html">Login</a>
-    <a href="signup.html">Signup</a>
+  <div class="navbar">
+    <a href="index.html">Global Chat</a>
+    <a href="login.html">Courses</a>
+    <a href="signup.html">UPCOMING TESTS</a>
     <!-- Add more navigation links as needed -->
   </div>
 
-  <form id="loginForm">
-    <input type="text" id="loginUsername" placeholder="Username" required>
-    <input type="password" id="loginPassword" placeholder="Password" required>
-    <button type="submit">Login</button>
-  </form>
-  <script src="./login.js"></script>
+  <div class="chat-container">
+    <div class="members-count">Online: <span class="count">-</span></div>
+    <div class="members-list">Members: <span class="list">-</span></div>
+
+    
+    </form>
+  </div>
+  <script src="./script.js"></script>
 </body>
 </html>
