--- a/login.html
+++ b/login.html
@@ -110,7 +110,8 @@
     <div class="members-count">Online: <span class="count">-</span></div>
     <div class="members-list">Members: <span class="list">-</span></div>
 
-    
+    <p>test</p>
+  
     </form>
   </div>
   <script src="./script.js"></script>
