--- a/index.html
+++ b/index.html
@@ -57,7 +57,21 @@
   font-size: 14px;
   border-radius: 3px;
 }
+.name-form {
+  display: flex;
+  padding: 10px;
+  border-top: 1px solid #ddd;
+}
 
+.name-form__input {
+  flex-grow: 1;
+  border: 1px solid #ddd;
+  padding: 8px;
+  font-size: 14px;
+  border-radius: 3px;
+}
+
+    
 .message-form__button {
   margin-left: 10px;
   padding: 8px 15px;
@@ -70,6 +84,20 @@
 }
 
 .message-form__button:hover {
+  background-color: #267bb5;
+}
+    .name-form__button {
+  margin-left: 10px;
+  padding: 8px 15px;
+  font-size: 14px;
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.name-form__button:hover {
   background-color: #267bb5;
 }
 
